--- a/style.css
+++ b/style.css
@@ -96,7 +96,6 @@ a:visited {
     border: 5px solid midnightblue;
     border-radius: 10px;
     filter: opacity(1);
-    filter: grayscale(0);
     transform: scale(1);
     transition: all 2s linear;
 }
@@ -104,6 +103,10 @@ a:visited {
     border: 5px solid lightblue;
     border-radius: 15px;
     filter: opacity(0.9);
-    filter: grayscale(15);
+    
     transform: scale(1.09);
+}
+
+li {
+text-align: center;
 }
